# cchb

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.claude/: settings.json  settings.local.json
.claude/agents/: cchb-code-security-auditor.md  cchb-supply-chain-auditor.md
.claude/hooks/: block-destructive.sh  format-and-lint.sh  protect-config.sh  stop-quality-gate.sh
.claude/plans/: composed-fluttering-oasis.md  elegant-doodling-torvalds.md  memoized-skipping-gadget.md  playful-gliding-pebble.md  shimmying-knitting-bubble.md  synthetic-gathering-emerson.md  toasty-kindling-planet.md
.claude/skills/checking-cchb-security/: SKILL.md
.github/: pinact.yaml
.github/workflows/: ci.yml  release.yml
docs/: SPECIFICATION.md
docs/adr/: 0001-page-navigation-with-arrow-keys.md  0002-merge-index-and-jsonl-scan-for-session-discovery.md  0003-enter-key-resumes-session.md  0004-cargo-toml-as-version-source-of-truth.md  0005-exclude-dev-assets-from-cargo-package.md
homebrew/: cchb.rb
scripts/: bump-tap-formula.sh  release.sh
src/: app.rs  color.rs  event.rs  filter.rs  lib.rs  main.rs  markdown.rs  session.rs  ui.rs
tests/: integration_test.rs
